# MaximumCommonSubgraph

./: README.md  check.py  componentes.py  generador.py  graficas.mcis  meson.build  salida.txt
instances_mcsi/: complete_g1.txt  core_noise_g1.txt  core_noise_g2.txt  iso_large_g1.txt  iso_large_g2.txt  sparse_g2.txt
scripts/: generador.py
src/: meson.build
src/include/: aco.hpp  ant.hpp  graph.hpp  graphy.hpp  mapping.hpp  pheromone.hpp  reader.hpp
src/main/: aco.cpp  ant.cpp  graph.cpp  graphy.cpp  main.cpp  mapping.cpp  pheromone.cpp  reader.cpp
