sources = files(
  'main/aco.cpp',
  'main/ant.cpp',
  'main/graph.cpp',
  'main/mapping.cpp',
  'main/pheromone.cpp',
  'main/reader.cpp',
  'main/main.cpp',
)

headers = files(
  'include/graph.hpp',
  'include/mapping.hpp',
  'include/pheromone.hpp',
  'include/ant.hpp',
  'include/aco.hpp',
  'include/reader.hpp'
)
